--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "framer-motion": "^11.0.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.400.0",
+    "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2",
-    "framer-motion": "^11.0.0",
-    "axios": "^1.6.0",
-    "react-qr-code": "^2.0.12",
     "react-dropzone": "^14.2.3",
-    "js-cookie": "^3.0.5",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.400.0"
+    "react-qr-code": "^2.0.12",
+    "styled-jsx": "^5.1.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/js-cookie": "^3.0.0",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
