--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "swr": "^2.2.5",
     "axios": "^1.6.0",
     "framer-motion": "^11.0.0",
     "js-cookie": "^3.0.5",
