--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "swr": "^2.2.5",
     "axios": "^1.6.0",
     "framer-motion": "^11.0.0",
     "js-cookie": "^3.0.5",
@@ -19,7 +18,9 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-qr-code": "^2.0.12",
-    "styled-jsx": "^5.1.7"
+    "socket.io-client": "^4.8.1",
+    "styled-jsx": "^5.1.7",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
