--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "firebase": "^12.3.0",
     "framer-motion": "^11.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
@@ -18,9 +19,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-qr-code": "^2.0.12",
-    "socket.io-client": "^4.8.1",
-    "styled-jsx": "^5.1.7",
-    "swr": "^2.2.5"
+    "styled-jsx": "^5.1.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
